Version 1.9.3:
	QTenki:
	    - Minimize to tray configuration option added.
		- Fix some configuration options which were not saved.

Version 1.9.2:
    General:
		- Added options to disable input range validation for humidex and heat index.
		- Added firmware and host support for a tachometer.
		- Updated SHT75 Relative humidity non-linearity compensation coefficients 
		  according to datasheet Rev.5 (2011).
		- Added an option to use the old coefficients (Datasheet rev.3, 2007)
		- Added a temperature corrected RH reading (sensirion only)
	       
	QTenki: 
	    - Better error handling (auto-reopen) and related logging options.
	    - Added application icons and version information to a windows rc
		  file. (Embedded in the final windows executable)

Version 1.9.1:
    General:
        - For Humidex and Heat index, when the input temperature/humidity is out of
          range, simply pass the temperature to the output. Better than displaying
          innaccurate and sometimes insane values.
	Command-line:
	    - Use the library to compute virtual channels. (code deduplication)
	QTenki:
	    - Changes to the theme.

Version 1.9.0:
	QTenki: 
		- Merged measurement type and unit together (gives Temperature - C,
		  Humidity - % etc).
		- The last heading line before the actual data is now alias.
		  Should reduce manipulations when importing in spreadsheet software.
		- Added a configuration tab.
		- System gui colors can be overridden. (For a special user who dislikes
		  the win7 default theme (too much white). Instead of changing his 
		  system theme (the sensible thing to do), he insists the application 
		  should change the colors itself. The customer is always right, but
		  at least I made this feature configurable, and off by default.

	Misc:
		- Updated Makefile.mingw in client/ and added conditionals for win32 in
			qtenki/
		- Public library API does not require including usb.h anymore

Version 1.8:
	New QTbased GUI for easy logging