@@ -87,6 +87,8 @@
 #define USBTENKI_CHIP_D6F_V03A1		0x10
 #define USBTENKI_CHIP_ADT7410		0x11
 
+#define USBTENKI_CHIP_PT100_RTD		0x12
+
 #define USBTENKI_MCU_ADC0		0x80
 #define USBTENKI_MCU_ADC1		0x81
 #define USBTENKI_MCU_ADC2		0x82
