@@ -5,7 +5,7 @@
 # Tabsize: 4
 # Copyright: (c) 2005 by OBJECTIVE DEVELOPMENT Software GmbH
 # License: Proprietary, free under certain conditions. See Documentation.
-# This Revision: $Id: Makefile,v 1.22 2012-02-12 04:46:22 cvs Exp $
+# This Revision: $Id: Makefile,v 1.23 2012-03-18 22:52:13 cvs Exp $
 
 SERIAL = /dev/avr
 UISP = uisp -dprog=stk500 -dserial=$(SERIAL) -dpart=ATmega8
@@ -26,7 +26,7 @@ SENSOR_OBJECTS = mcp9800.o mcp9800.o lm75.o sser.o tsl256x.o
 # driver-internal global variables!
 
 # symbolic targets:
-all: mcp9800_00.hex mcp9800.hex lm75.hex sensirion.hex adc.hex tsl2561.hex tsl2568.hex bs02.hex sensirion_pc23.hex se95.hex adt7410.hex tachometer.hex
+all: mcp9800_00.hex mcp9800.hex lm75.hex sensirion.hex adc.hex tsl2561.hex tsl2568.hex bs02.hex sensirion_pc23.hex se95.hex adt7410.hex tachometer.hex pt100_rtd.hex
 
 %.o: %.c
 	$(COMPILE) -c $< -o $@
@@ -110,6 +110,10 @@ flash_tachometer: tachometer.hex
 flash_tachometer_usb: tachometer.hex
 	sudo avrdude -p m8 -P usb -c avrispmkII -Uflash:w:$< -B 1.0
 
+flash_pt100_rtd_usb: pt100_rtd.hex
+	sudo avrdude -p m8 -P usb -c avrispmkII -Uflash:w:$< -B 1.0
+
+
 #
 # Fuse high byte = 0xC1
 #  | RSTDISBL | WDTON | SPIEN | CKOPT | EESAVE | BOOTSZ1-0 | BOOTRST |
@@ -168,6 +172,10 @@ adt7410.elf: $(COMMON_OBJECTS) interface_adt7410.o mcp9800.o
 
 tachometer.elf: $(COMMON_OBJECTS) interface_int1_tachometer.o
 	$(COMPILE) -o $@ $^
+
+pt100_rtd.elf: $(COMMON_OBJECTS) interface_pt100_rtd.o mcp3423.o
+	$(COMPILE) -o $@ $^
+
 
 %.hex: %.elf
 	rm -f $@
